--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
+.idea/.gitignore
+.idea/discord.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/gradle.xml
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
